--- a/index.html
+++ b/index.html
@@ -29,69 +29,69 @@
 			</div>
 			<div class="row g-0">
                 <div class="col">
-				    <button type="button" class="btn btn-block btn-outline-info w-100" style="height: 125px" id = "C">     C     </button>
+				    <button type="button" class="btn btn-block btn-outline-info w-100 fs-1" style="height: 125px" id = "C">     C     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id = "Back">     ⌫     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id = "Back">     ⌫     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px"  id="exp">     ^     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px"  id="exp">     ^     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id="div">     /     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id="div">     /     </button>
                 </div>
             </div>
 			<div class="row g-0">
                 <div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no9">     9     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no9">     9     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no8">     8     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no8">     8     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no7">     7     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no7">     7     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id="mul">     *     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id="mul">     *     </button>
                 </div>
             </div>
 			<div class="row g-0">
                 <div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no6">     6     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no6">     6     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no5">     5     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no5">     5     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no4">     4     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no4">     4     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id="sub">     -     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id="sub">     -     </button>
                 </div>
             </div>
 			<div class="row g-0">
                 <div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no3">     3     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no3">     3     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no2">     2     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no2">     2     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no1">     1     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no1">     1     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id="add">     +     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id="add">     +     </button>
                 </div>
             </div>
 			<div class="row g-0">
 				<div class="col-6">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="no0">     0     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="no0">     0     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-light w-100" style="height: 125px" id="point_add">     .     </button>
+				    <button type="button" class="btn btn-block btn-outline-light w-100 fs-1" style="height: 125px" id="point_add">     .     </button>
 				</div>
 				<div class="col">
-				    <button type="button" class="btn btn-block btn-outline-warning w-100" style="height: 125px" id="equals_to">     =     </button>
+				    <button type="button" class="btn btn-block btn-outline-warning w-100 fs-1" style="height: 125px" id="equals_to">     =     </button>
                 </div>
             </div>
         </div>
